download and unzip all 2020 files

--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        " '202012-citibike-tripdata.csv.zip']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        " 'JC-202012-citibike-tripdata.csv.zip']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,6 +111,67 @@
     "    jc_extract_files.append(files[i].get_text())\n",
     "    \n",
     "jc_extract_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download and unzip the files using a for loop\n",
+    "\n",
+    "import os\n",
+    "import zipfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download & unzip non-JC files\n",
+    "# move data up a directory so it's not added to github\n",
+    "\n",
+    "for file in extract_files:\n",
+    "    file_url = url + file\n",
+    "    \n",
+    "    #download files\n",
+    "    with open(file, \"wb\") as f:\n",
+    "            response = requests.get(file_url)\n",
+    "            f.write(response.content)\n",
+    "    \n",
+    "    # unzip data files\n",
+    "    with zipfile.ZipFile(file, \"r\") as zip_ref:\n",
+    "        zip_ref.extractall(\"../tripdata\")        \n",
+    "    \n",
+    "    # remove zipped file after unziping\n",
+    "    os.remove(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download & unzip JC files\n",
+    "\n",
+    "for file in jc_extract_files:\n",
+    "    file_url = url + file\n",
+    "    \n",
+    "    #download files\n",
+    "    with open(file, \"wb\") as f:\n",
+    "            response = requests.get(file_url)\n",
+    "            f.write(response.content)\n",
+    "    \n",
+    "    # unzip data files\n",
+    "    with zipfile.ZipFile(file, \"r\") as zip_ref:\n",
+    "        zip_ref.extractall(\"../tripdata\")        \n",
+    "    \n",
+    "    # remove zipped file after unziping\n",
+    "    os.remove(file)"
    ]
   },
   {
