--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -176,6 +176,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename files to be more manageable\n",
+    "# files have long names such as '202001-citibike-tripdata.csv' or 'JC-202001-citibike-tripdata'\n",
+    "# just want the year and month and also include the 'jc' until I can figure out the difference\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directory = '../tripdata/'\n",
+    "\n",
+    "for file in os.listdir(directory):\n",
+    "    filename = os.fsdecode(file)\n",
+    "    if filename.endswith('.csv'):\n",
+    "        new_filename = filename.replace(' ','').lower().split('ci', 1)[0].strip('-').replace('-','_')\n",
+    "        os.rename(os.path.join(directory, filename), os.path.join(directory, new_filename + '.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
