--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -205,6 +205,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load into DataFrames into dfs dictionary\n",
+    "directory = '../tripdata/'\n",
+    "dfs = {}\n",
+    "\n",
+    "for file in os.listdir(directory):\n",
+    "    filename = os.fsdecode(file)\n",
+    "    if filename.endswith('.csv'):\n",
+    "        dfs[filename.split('.')[0]] = pd.read_csv(os.path.join(directory, filename)) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
