--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -1083,6 +1083,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>starttime</th>\n",
+       "      <th>stoptime</th>\n",
+       "      <th>start station id</th>\n",
+       "      <th>start station name</th>\n",
+       "      <th>start station latitude</th>\n",
+       "      <th>start station longitude</th>\n",
+       "      <th>bikeid</th>\n",
+       "      <th>birth year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>789</td>\n",
+       "      <td>2020-01-01 00:00:55.3900</td>\n",
+       "      <td>2020-01-01 00:14:05.1470</td>\n",
+       "      <td>504</td>\n",
+       "      <td>1 Ave &amp; E 16 St</td>\n",
+       "      <td>40.732219</td>\n",
+       "      <td>-73.981656</td>\n",
+       "      <td>30326</td>\n",
+       "      <td>1992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1541</td>\n",
+       "      <td>2020-01-01 00:01:08.1020</td>\n",
+       "      <td>2020-01-01 00:26:49.1780</td>\n",
+       "      <td>3423</td>\n",
+       "      <td>West Drive &amp; Prospect Park West</td>\n",
+       "      <td>40.661063</td>\n",
+       "      <td>-73.979453</td>\n",
+       "      <td>17105</td>\n",
+       "      <td>1969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1464</td>\n",
+       "      <td>2020-01-01 00:01:42.1400</td>\n",
+       "      <td>2020-01-01 00:26:07.0110</td>\n",
+       "      <td>3687</td>\n",
+       "      <td>E 33 St &amp; 1 Ave</td>\n",
+       "      <td>40.743227</td>\n",
+       "      <td>-73.974498</td>\n",
+       "      <td>40177</td>\n",
+       "      <td>1963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>592</td>\n",
+       "      <td>2020-01-01 00:01:45.5610</td>\n",
+       "      <td>2020-01-01 00:11:38.1550</td>\n",
+       "      <td>346</td>\n",
+       "      <td>Bank St &amp; Hudson St</td>\n",
+       "      <td>40.736529</td>\n",
+       "      <td>-74.006180</td>\n",
+       "      <td>27690</td>\n",
+       "      <td>1980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>702</td>\n",
+       "      <td>2020-01-01 00:01:45.7880</td>\n",
+       "      <td>2020-01-01 00:13:28.2400</td>\n",
+       "      <td>372</td>\n",
+       "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
+       "      <td>40.694546</td>\n",
+       "      <td>-73.958014</td>\n",
+       "      <td>32583</td>\n",
+       "      <td>1982</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tripduration                 starttime                  stoptime  \\\n",
+       "0           789  2020-01-01 00:00:55.3900  2020-01-01 00:14:05.1470   \n",
+       "1          1541  2020-01-01 00:01:08.1020  2020-01-01 00:26:49.1780   \n",
+       "2          1464  2020-01-01 00:01:42.1400  2020-01-01 00:26:07.0110   \n",
+       "3           592  2020-01-01 00:01:45.5610  2020-01-01 00:11:38.1550   \n",
+       "4           702  2020-01-01 00:01:45.7880  2020-01-01 00:13:28.2400   \n",
+       "\n",
+       "   start station id               start station name  start station latitude  \\\n",
+       "0               504                  1 Ave & E 16 St               40.732219   \n",
+       "1              3423  West Drive & Prospect Park West               40.661063   \n",
+       "2              3687                  E 33 St & 1 Ave               40.743227   \n",
+       "3               346              Bank St & Hudson St               40.736529   \n",
+       "4               372        Franklin Ave & Myrtle Ave               40.694546   \n",
+       "\n",
+       "   start station longitude  bikeid  birth year  \n",
+       "0               -73.981656   30326        1992  \n",
+       "1               -73.979453   17105        1969  \n",
+       "2               -73.974498   40177        1963  \n",
+       "3               -74.006180   27690        1980  \n",
+       "4               -73.958014   32583        1982  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# select only needed columns\n",
+    "# I would like to keep all the columns, but this makes the dataset smaller and more managable.\n",
+    "\n",
+    "twenty_df = twenty_df[['tripduration','starttime','stoptime', 'start station id', 'start station name','start station latitude','start station longitude','bikeid','birth year']]\n",
+    "twenty_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/SJR/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:4125: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().rename(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration(s)</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>stop_time</th>\n",
+       "      <th>start_id</th>\n",
+       "      <th>start_name</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>bike_id</th>\n",
+       "      <th>birth_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>789</td>\n",
+       "      <td>2020-01-01 00:00:55.3900</td>\n",
+       "      <td>2020-01-01 00:14:05.1470</td>\n",
+       "      <td>504</td>\n",
+       "      <td>1 Ave &amp; E 16 St</td>\n",
+       "      <td>40.732219</td>\n",
+       "      <td>-73.981656</td>\n",
+       "      <td>30326</td>\n",
+       "      <td>1992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1541</td>\n",
+       "      <td>2020-01-01 00:01:08.1020</td>\n",
+       "      <td>2020-01-01 00:26:49.1780</td>\n",
+       "      <td>3423</td>\n",
+       "      <td>West Drive &amp; Prospect Park West</td>\n",
+       "      <td>40.661063</td>\n",
+       "      <td>-73.979453</td>\n",
+       "      <td>17105</td>\n",
+       "      <td>1969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1464</td>\n",
+       "      <td>2020-01-01 00:01:42.1400</td>\n",
+       "      <td>2020-01-01 00:26:07.0110</td>\n",
+       "      <td>3687</td>\n",
+       "      <td>E 33 St &amp; 1 Ave</td>\n",
+       "      <td>40.743227</td>\n",
+       "      <td>-73.974498</td>\n",
+       "      <td>40177</td>\n",
+       "      <td>1963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>592</td>\n",
+       "      <td>2020-01-01 00:01:45.5610</td>\n",
+       "      <td>2020-01-01 00:11:38.1550</td>\n",
+       "      <td>346</td>\n",
+       "      <td>Bank St &amp; Hudson St</td>\n",
+       "      <td>40.736529</td>\n",
+       "      <td>-74.006180</td>\n",
+       "      <td>27690</td>\n",
+       "      <td>1980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>702</td>\n",
+       "      <td>2020-01-01 00:01:45.7880</td>\n",
+       "      <td>2020-01-01 00:13:28.2400</td>\n",
+       "      <td>372</td>\n",
+       "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
+       "      <td>40.694546</td>\n",
+       "      <td>-73.958014</td>\n",
+       "      <td>32583</td>\n",
+       "      <td>1982</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   duration(s)                start_time                 stop_time  start_id  \\\n",
+       "0          789  2020-01-01 00:00:55.3900  2020-01-01 00:14:05.1470       504   \n",
+       "1         1541  2020-01-01 00:01:08.1020  2020-01-01 00:26:49.1780      3423   \n",
+       "2         1464  2020-01-01 00:01:42.1400  2020-01-01 00:26:07.0110      3687   \n",
+       "3          592  2020-01-01 00:01:45.5610  2020-01-01 00:11:38.1550       346   \n",
+       "4          702  2020-01-01 00:01:45.7880  2020-01-01 00:13:28.2400       372   \n",
+       "\n",
+       "                        start_name  start_lat  start_lng  bike_id  birth_year  \n",
+       "0                  1 Ave & E 16 St  40.732219 -73.981656    30326        1992  \n",
+       "1  West Drive & Prospect Park West  40.661063 -73.979453    17105        1969  \n",
+       "2                  E 33 St & 1 Ave  40.743227 -73.974498    40177        1963  \n",
+       "3              Bank St & Hudson St  40.736529 -74.006180    27690        1980  \n",
+       "4        Franklin Ave & Myrtle Ave  40.694546 -73.958014    32583        1982  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rename columns\n",
+    "\n",
+    "twenty_df.rename(columns = {'tripduration':'duration(s)', 'starttime':'start_time', 'stoptime':'stop_time', 'start station id': 'start_id',\n",
+    "                             'start station name': 'start_name', 'start station latitude': 'start_lat', 'start station longitude': 'start_lng',\n",
+    "                             'bikeid': 'bike_id', 'birth year': 'birth_year'}, inplace = True)\n",
+    "twenty_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
