check for nulls and export as csv file

--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -1364,6 +1364,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "duration(s)    19843659\n",
+       "start_time     19843659\n",
+       "stop_time      19843659\n",
+       "start_id       19843659\n",
+       "start_name     19843659\n",
+       "start_lat      19843659\n",
+       "start_lng      19843659\n",
+       "bike_id        19843659\n",
+       "birth_year     19843659\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for nulls\n",
+    "\n",
+    "twenty_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export as csv for use in Tableau\n",
+    "\n",
+    "twenty_df.to_csv(\"../clean_tripdata/2020.csv\", index=True, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
