--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "4        1982       1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1114,8 +1114,10 @@
        "      <th>start station name</th>\n",
        "      <th>start station latitude</th>\n",
        "      <th>start station longitude</th>\n",
+       "      <th>usertype</th>\n",
        "      <th>bikeid</th>\n",
        "      <th>birth year</th>\n",
+       "      <th>gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1128,8 +1130,10 @@
        "      <td>1 Ave &amp; E 16 St</td>\n",
        "      <td>40.732219</td>\n",
        "      <td>-73.981656</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>30326</td>\n",
        "      <td>1992</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1140,8 +1144,10 @@
        "      <td>West Drive &amp; Prospect Park West</td>\n",
        "      <td>40.661063</td>\n",
        "      <td>-73.979453</td>\n",
+       "      <td>Customer</td>\n",
        "      <td>17105</td>\n",
        "      <td>1969</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1152,8 +1158,10 @@
        "      <td>E 33 St &amp; 1 Ave</td>\n",
        "      <td>40.743227</td>\n",
        "      <td>-73.974498</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>40177</td>\n",
        "      <td>1963</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1164,8 +1172,10 @@
        "      <td>Bank St &amp; Hudson St</td>\n",
        "      <td>40.736529</td>\n",
        "      <td>-74.006180</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>27690</td>\n",
        "      <td>1980</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1176,8 +1186,10 @@
        "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
        "      <td>40.694546</td>\n",
        "      <td>-73.958014</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>32583</td>\n",
        "      <td>1982</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1198,15 +1210,15 @@
        "3               346              Bank St & Hudson St               40.736529   \n",
        "4               372        Franklin Ave & Myrtle Ave               40.694546   \n",
        "\n",
-       "   start station longitude  bikeid  birth year  \n",
-       "0               -73.981656   30326        1992  \n",
-       "1               -73.979453   17105        1969  \n",
-       "2               -73.974498   40177        1963  \n",
-       "3               -74.006180   27690        1980  \n",
-       "4               -73.958014   32583        1982  "
+       "   start station longitude    usertype  bikeid  birth year  gender  \n",
+       "0               -73.981656  Subscriber   30326        1992       1  \n",
+       "1               -73.979453    Customer   17105        1969       1  \n",
+       "2               -73.974498  Subscriber   40177        1963       1  \n",
+       "3               -74.006180  Subscriber   27690        1980       1  \n",
+       "4               -73.958014  Subscriber   32583        1982       1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,26 +1227,15 @@
     "# select only needed columns\n",
     "# I would like to keep all the columns, but this makes the dataset smaller and more managable.\n",
     "\n",
-    "twenty_df = twenty_df[['tripduration','starttime','stoptime', 'start station id', 'start station name','start station latitude','start station longitude','bikeid','birth year']]\n",
+    "twenty_df = twenty_df[['tripduration','starttime','stoptime', 'start station id', 'start station name','start station latitude','start station longitude','usertype','bikeid','birth year','gender']]\n",
     "twenty_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/SJR/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py:4125: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().rename(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1263,8 +1264,10 @@
        "      <th>start_name</th>\n",
        "      <th>start_lat</th>\n",
        "      <th>start_lng</th>\n",
+       "      <th>usertype</th>\n",
        "      <th>bike_id</th>\n",
        "      <th>birth_year</th>\n",
+       "      <th>gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1277,8 +1280,10 @@
        "      <td>1 Ave &amp; E 16 St</td>\n",
        "      <td>40.732219</td>\n",
        "      <td>-73.981656</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>30326</td>\n",
        "      <td>1992</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1289,8 +1294,10 @@
        "      <td>West Drive &amp; Prospect Park West</td>\n",
        "      <td>40.661063</td>\n",
        "      <td>-73.979453</td>\n",
+       "      <td>Customer</td>\n",
        "      <td>17105</td>\n",
        "      <td>1969</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1301,8 +1308,10 @@
        "      <td>E 33 St &amp; 1 Ave</td>\n",
        "      <td>40.743227</td>\n",
        "      <td>-73.974498</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>40177</td>\n",
        "      <td>1963</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1313,8 +1322,10 @@
        "      <td>Bank St &amp; Hudson St</td>\n",
        "      <td>40.736529</td>\n",
        "      <td>-74.006180</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>27690</td>\n",
        "      <td>1980</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1325,8 +1336,10 @@
        "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
        "      <td>40.694546</td>\n",
        "      <td>-73.958014</td>\n",
+       "      <td>Subscriber</td>\n",
        "      <td>32583</td>\n",
        "      <td>1982</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1340,15 +1353,22 @@
        "3          592  2020-01-01 00:01:45.5610  2020-01-01 00:11:38.1550       346   \n",
        "4          702  2020-01-01 00:01:45.7880  2020-01-01 00:13:28.2400       372   \n",
        "\n",
-       "                        start_name  start_lat  start_lng  bike_id  birth_year  \n",
-       "0                  1 Ave & E 16 St  40.732219 -73.981656    30326        1992  \n",
-       "1  West Drive & Prospect Park West  40.661063 -73.979453    17105        1969  \n",
-       "2                  E 33 St & 1 Ave  40.743227 -73.974498    40177        1963  \n",
-       "3              Bank St & Hudson St  40.736529 -74.006180    27690        1980  \n",
-       "4        Franklin Ave & Myrtle Ave  40.694546 -73.958014    32583        1982  "
+       "                        start_name  start_lat  start_lng    usertype  bike_id  \\\n",
+       "0                  1 Ave & E 16 St  40.732219 -73.981656  Subscriber    30326   \n",
+       "1  West Drive & Prospect Park West  40.661063 -73.979453    Customer    17105   \n",
+       "2                  E 33 St & 1 Ave  40.743227 -73.974498  Subscriber    40177   \n",
+       "3              Bank St & Hudson St  40.736529 -74.006180  Subscriber    27690   \n",
+       "4        Franklin Ave & Myrtle Ave  40.694546 -73.958014  Subscriber    32583   \n",
+       "\n",
+       "   birth_year  gender  \n",
+       "0        1992       1  \n",
+       "1        1969       1  \n",
+       "2        1963       1  \n",
+       "3        1980       1  \n",
+       "4        1982       1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,6 +1379,154 @@
     "twenty_df.rename(columns = {'tripduration':'duration(s)', 'starttime':'start_time', 'stoptime':'stop_time', 'start station id': 'start_id',\n",
     "                             'start station name': 'start_name', 'start station latitude': 'start_lat', 'start station longitude': 'start_lng',\n",
     "                             'bikeid': 'bike_id', 'birth year': 'birth_year'}, inplace = True)\n",
+    "twenty_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bike_id</th>\n",
+       "      <th>usertype</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>start_id</th>\n",
+       "      <th>start_name</th>\n",
+       "      <th>duration(s)</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>stop_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30326</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.732219</td>\n",
+       "      <td>-73.981656</td>\n",
+       "      <td>504</td>\n",
+       "      <td>1 Ave &amp; E 16 St</td>\n",
+       "      <td>789</td>\n",
+       "      <td>2020-01-01 00:00:55.3900</td>\n",
+       "      <td>2020-01-01 00:14:05.1470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17105</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.661063</td>\n",
+       "      <td>-73.979453</td>\n",
+       "      <td>3423</td>\n",
+       "      <td>West Drive &amp; Prospect Park West</td>\n",
+       "      <td>1541</td>\n",
+       "      <td>2020-01-01 00:01:08.1020</td>\n",
+       "      <td>2020-01-01 00:26:49.1780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40177</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.743227</td>\n",
+       "      <td>-73.974498</td>\n",
+       "      <td>3687</td>\n",
+       "      <td>E 33 St &amp; 1 Ave</td>\n",
+       "      <td>1464</td>\n",
+       "      <td>2020-01-01 00:01:42.1400</td>\n",
+       "      <td>2020-01-01 00:26:07.0110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27690</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.736529</td>\n",
+       "      <td>-74.006180</td>\n",
+       "      <td>346</td>\n",
+       "      <td>Bank St &amp; Hudson St</td>\n",
+       "      <td>592</td>\n",
+       "      <td>2020-01-01 00:01:45.5610</td>\n",
+       "      <td>2020-01-01 00:11:38.1550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32583</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.694546</td>\n",
+       "      <td>-73.958014</td>\n",
+       "      <td>372</td>\n",
+       "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
+       "      <td>702</td>\n",
+       "      <td>2020-01-01 00:01:45.7880</td>\n",
+       "      <td>2020-01-01 00:13:28.2400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bike_id    usertype  birth_year  gender  start_lat  start_lng  start_id  \\\n",
+       "0    30326  Subscriber        1992       1  40.732219 -73.981656       504   \n",
+       "1    17105    Customer        1969       1  40.661063 -73.979453      3423   \n",
+       "2    40177  Subscriber        1963       1  40.743227 -73.974498      3687   \n",
+       "3    27690  Subscriber        1980       1  40.736529 -74.006180       346   \n",
+       "4    32583  Subscriber        1982       1  40.694546 -73.958014       372   \n",
+       "\n",
+       "                        start_name  duration(s)                start_time  \\\n",
+       "0                  1 Ave & E 16 St          789  2020-01-01 00:00:55.3900   \n",
+       "1  West Drive & Prospect Park West         1541  2020-01-01 00:01:08.1020   \n",
+       "2                  E 33 St & 1 Ave         1464  2020-01-01 00:01:42.1400   \n",
+       "3              Bank St & Hudson St          592  2020-01-01 00:01:45.5610   \n",
+       "4        Franklin Ave & Myrtle Ave          702  2020-01-01 00:01:45.7880   \n",
+       "\n",
+       "                  stop_time  \n",
+       "0  2020-01-01 00:14:05.1470  \n",
+       "1  2020-01-01 00:26:49.1780  \n",
+       "2  2020-01-01 00:26:07.0110  \n",
+       "3  2020-01-01 00:11:38.1550  \n",
+       "4  2020-01-01 00:13:28.2400  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rearrange columns\n",
+    "twenty_df = twenty_df[['bike_id','usertype','birth_year','gender', 'start_lat', 'start_lng', 'start_id','start_name', 'duration(s)','start_time','stop_time']]\n",
     "twenty_df.head()"
    ]
   },
@@ -1395,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
