drop end_time column

--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "4        1982       1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,6 @@
        "      <th></th>\n",
        "      <th>tripduration</th>\n",
        "      <th>starttime</th>\n",
-       "      <th>stoptime</th>\n",
        "      <th>start station id</th>\n",
        "      <th>start station name</th>\n",
        "      <th>start station latitude</th>\n",
@@ -1125,7 +1124,6 @@
        "      <th>0</th>\n",
        "      <td>789</td>\n",
        "      <td>2020-01-01 00:00:55.3900</td>\n",
-       "      <td>2020-01-01 00:14:05.1470</td>\n",
        "      <td>504</td>\n",
        "      <td>1 Ave &amp; E 16 St</td>\n",
        "      <td>40.732219</td>\n",
@@ -1139,7 +1137,6 @@
        "      <th>1</th>\n",
        "      <td>1541</td>\n",
        "      <td>2020-01-01 00:01:08.1020</td>\n",
-       "      <td>2020-01-01 00:26:49.1780</td>\n",
        "      <td>3423</td>\n",
        "      <td>West Drive &amp; Prospect Park West</td>\n",
        "      <td>40.661063</td>\n",
@@ -1153,7 +1150,6 @@
        "      <th>2</th>\n",
        "      <td>1464</td>\n",
        "      <td>2020-01-01 00:01:42.1400</td>\n",
-       "      <td>2020-01-01 00:26:07.0110</td>\n",
        "      <td>3687</td>\n",
        "      <td>E 33 St &amp; 1 Ave</td>\n",
        "      <td>40.743227</td>\n",
@@ -1167,7 +1163,6 @@
        "      <th>3</th>\n",
        "      <td>592</td>\n",
        "      <td>2020-01-01 00:01:45.5610</td>\n",
-       "      <td>2020-01-01 00:11:38.1550</td>\n",
        "      <td>346</td>\n",
        "      <td>Bank St &amp; Hudson St</td>\n",
        "      <td>40.736529</td>\n",
@@ -1181,7 +1176,6 @@
        "      <th>4</th>\n",
        "      <td>702</td>\n",
        "      <td>2020-01-01 00:01:45.7880</td>\n",
-       "      <td>2020-01-01 00:13:28.2400</td>\n",
        "      <td>372</td>\n",
        "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
        "      <td>40.694546</td>\n",
@@ -1196,19 +1190,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   tripduration                 starttime                  stoptime  \\\n",
-       "0           789  2020-01-01 00:00:55.3900  2020-01-01 00:14:05.1470   \n",
-       "1          1541  2020-01-01 00:01:08.1020  2020-01-01 00:26:49.1780   \n",
-       "2          1464  2020-01-01 00:01:42.1400  2020-01-01 00:26:07.0110   \n",
-       "3           592  2020-01-01 00:01:45.5610  2020-01-01 00:11:38.1550   \n",
-       "4           702  2020-01-01 00:01:45.7880  2020-01-01 00:13:28.2400   \n",
+       "   tripduration                 starttime  start station id  \\\n",
+       "0           789  2020-01-01 00:00:55.3900               504   \n",
+       "1          1541  2020-01-01 00:01:08.1020              3423   \n",
+       "2          1464  2020-01-01 00:01:42.1400              3687   \n",
+       "3           592  2020-01-01 00:01:45.5610               346   \n",
+       "4           702  2020-01-01 00:01:45.7880               372   \n",
        "\n",
-       "   start station id               start station name  start station latitude  \\\n",
-       "0               504                  1 Ave & E 16 St               40.732219   \n",
-       "1              3423  West Drive & Prospect Park West               40.661063   \n",
-       "2              3687                  E 33 St & 1 Ave               40.743227   \n",
-       "3               346              Bank St & Hudson St               40.736529   \n",
-       "4               372        Franklin Ave & Myrtle Ave               40.694546   \n",
+       "                start station name  start station latitude  \\\n",
+       "0                  1 Ave & E 16 St               40.732219   \n",
+       "1  West Drive & Prospect Park West               40.661063   \n",
+       "2                  E 33 St & 1 Ave               40.743227   \n",
+       "3              Bank St & Hudson St               40.736529   \n",
+       "4        Franklin Ave & Myrtle Ave               40.694546   \n",
        "\n",
        "   start station longitude    usertype  bikeid  birth year  gender  \n",
        "0               -73.981656  Subscriber   30326        1992       1  \n",
@@ -1218,7 +1212,7 @@
        "4               -73.958014  Subscriber   32583        1982       1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,13 +1221,13 @@
     "# select only needed columns\n",
     "# I would like to keep all the columns, but this makes the dataset smaller and more managable.\n",
     "\n",
-    "twenty_df = twenty_df[['tripduration','starttime','stoptime', 'start station id', 'start station name','start station latitude','start station longitude','usertype','bikeid','birth year','gender']]\n",
+    "twenty_df = twenty_df[['tripduration','starttime','start station id', 'start station name','start station latitude','start station longitude','usertype','bikeid','birth year','gender']]\n",
     "twenty_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1253,6 @@
        "      <th></th>\n",
        "      <th>duration(s)</th>\n",
        "      <th>start_time</th>\n",
-       "      <th>stop_time</th>\n",
        "      <th>start_id</th>\n",
        "      <th>start_name</th>\n",
        "      <th>start_lat</th>\n",
@@ -1275,7 +1268,6 @@
        "      <th>0</th>\n",
        "      <td>789</td>\n",
        "      <td>2020-01-01 00:00:55.3900</td>\n",
-       "      <td>2020-01-01 00:14:05.1470</td>\n",
        "      <td>504</td>\n",
        "      <td>1 Ave &amp; E 16 St</td>\n",
        "      <td>40.732219</td>\n",
@@ -1289,7 +1281,6 @@
        "      <th>1</th>\n",
        "      <td>1541</td>\n",
        "      <td>2020-01-01 00:01:08.1020</td>\n",
-       "      <td>2020-01-01 00:26:49.1780</td>\n",
        "      <td>3423</td>\n",
        "      <td>West Drive &amp; Prospect Park West</td>\n",
        "      <td>40.661063</td>\n",
@@ -1303,7 +1294,6 @@
        "      <th>2</th>\n",
        "      <td>1464</td>\n",
        "      <td>2020-01-01 00:01:42.1400</td>\n",
-       "      <td>2020-01-01 00:26:07.0110</td>\n",
        "      <td>3687</td>\n",
        "      <td>E 33 St &amp; 1 Ave</td>\n",
        "      <td>40.743227</td>\n",
@@ -1317,7 +1307,6 @@
        "      <th>3</th>\n",
        "      <td>592</td>\n",
        "      <td>2020-01-01 00:01:45.5610</td>\n",
-       "      <td>2020-01-01 00:11:38.1550</td>\n",
        "      <td>346</td>\n",
        "      <td>Bank St &amp; Hudson St</td>\n",
        "      <td>40.736529</td>\n",
@@ -1331,7 +1320,6 @@
        "      <th>4</th>\n",
        "      <td>702</td>\n",
        "      <td>2020-01-01 00:01:45.7880</td>\n",
-       "      <td>2020-01-01 00:13:28.2400</td>\n",
        "      <td>372</td>\n",
        "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
        "      <td>40.694546</td>\n",
@@ -1346,12 +1334,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   duration(s)                start_time                 stop_time  start_id  \\\n",
-       "0          789  2020-01-01 00:00:55.3900  2020-01-01 00:14:05.1470       504   \n",
-       "1         1541  2020-01-01 00:01:08.1020  2020-01-01 00:26:49.1780      3423   \n",
-       "2         1464  2020-01-01 00:01:42.1400  2020-01-01 00:26:07.0110      3687   \n",
-       "3          592  2020-01-01 00:01:45.5610  2020-01-01 00:11:38.1550       346   \n",
-       "4          702  2020-01-01 00:01:45.7880  2020-01-01 00:13:28.2400       372   \n",
+       "   duration(s)                start_time  start_id  \\\n",
+       "0          789  2020-01-01 00:00:55.3900       504   \n",
+       "1         1541  2020-01-01 00:01:08.1020      3423   \n",
+       "2         1464  2020-01-01 00:01:42.1400      3687   \n",
+       "3          592  2020-01-01 00:01:45.5610       346   \n",
+       "4          702  2020-01-01 00:01:45.7880       372   \n",
        "\n",
        "                        start_name  start_lat  start_lng    usertype  bike_id  \\\n",
        "0                  1 Ave & E 16 St  40.732219 -73.981656  Subscriber    30326   \n",
@@ -1368,7 +1356,7 @@
        "4        1982       1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1364,7 @@
    "source": [
     "# rename columns\n",
     "\n",
-    "twenty_df.rename(columns = {'tripduration':'duration(s)', 'starttime':'start_time', 'stoptime':'stop_time', 'start station id': 'start_id',\n",
+    "twenty_df.rename(columns = {'tripduration':'duration(s)', 'starttime':'start_time', 'start station id': 'start_id',\n",
     "                             'start station name': 'start_name', 'start station latitude': 'start_lat', 'start station longitude': 'start_lng',\n",
     "                             'bikeid': 'bike_id', 'birth year': 'birth_year'}, inplace = True)\n",
     "twenty_df.head()"
@@ -1384,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1406,6 @@
        "      <th>start_name</th>\n",
        "      <th>duration(s)</th>\n",
        "      <th>start_time</th>\n",
-       "      <th>stop_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1434,7 +1421,6 @@
        "      <td>1 Ave &amp; E 16 St</td>\n",
        "      <td>789</td>\n",
        "      <td>2020-01-01 00:00:55.3900</td>\n",
-       "      <td>2020-01-01 00:14:05.1470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1448,7 +1434,6 @@
        "      <td>West Drive &amp; Prospect Park West</td>\n",
        "      <td>1541</td>\n",
        "      <td>2020-01-01 00:01:08.1020</td>\n",
-       "      <td>2020-01-01 00:26:49.1780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1462,7 +1447,6 @@
        "      <td>E 33 St &amp; 1 Ave</td>\n",
        "      <td>1464</td>\n",
        "      <td>2020-01-01 00:01:42.1400</td>\n",
-       "      <td>2020-01-01 00:26:07.0110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1476,7 +1460,6 @@
        "      <td>Bank St &amp; Hudson St</td>\n",
        "      <td>592</td>\n",
        "      <td>2020-01-01 00:01:45.5610</td>\n",
-       "      <td>2020-01-01 00:11:38.1550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1490,7 +1473,6 @@
        "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
        "      <td>702</td>\n",
        "      <td>2020-01-01 00:01:45.7880</td>\n",
-       "      <td>2020-01-01 00:13:28.2400</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1504,29 +1486,22 @@
        "3    27690  Subscriber        1980       1  40.736529 -74.006180       346   \n",
        "4    32583  Subscriber        1982       1  40.694546 -73.958014       372   \n",
        "\n",
-       "                        start_name  duration(s)                start_time  \\\n",
-       "0                  1 Ave & E 16 St          789  2020-01-01 00:00:55.3900   \n",
-       "1  West Drive & Prospect Park West         1541  2020-01-01 00:01:08.1020   \n",
-       "2                  E 33 St & 1 Ave         1464  2020-01-01 00:01:42.1400   \n",
-       "3              Bank St & Hudson St          592  2020-01-01 00:01:45.5610   \n",
-       "4        Franklin Ave & Myrtle Ave          702  2020-01-01 00:01:45.7880   \n",
-       "\n",
-       "                  stop_time  \n",
-       "0  2020-01-01 00:14:05.1470  \n",
-       "1  2020-01-01 00:26:49.1780  \n",
-       "2  2020-01-01 00:26:07.0110  \n",
-       "3  2020-01-01 00:11:38.1550  \n",
-       "4  2020-01-01 00:13:28.2400  "
+       "                        start_name  duration(s)                start_time  \n",
+       "0                  1 Ave & E 16 St          789  2020-01-01 00:00:55.3900  \n",
+       "1  West Drive & Prospect Park West         1541  2020-01-01 00:01:08.1020  \n",
+       "2                  E 33 St & 1 Ave         1464  2020-01-01 00:01:42.1400  \n",
+       "3              Bank St & Hudson St          592  2020-01-01 00:01:45.5610  \n",
+       "4        Franklin Ave & Myrtle Ave          702  2020-01-01 00:01:45.7880  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# rearrange columns\n",
-    "twenty_df = twenty_df[['bike_id','usertype','birth_year','gender', 'start_lat', 'start_lng', 'start_id','start_name', 'duration(s)','start_time','stop_time']]\n",
+    "twenty_df = twenty_df[['bike_id','usertype','birth_year','gender', 'start_lat', 'start_lng', 'start_id','start_name', 'duration(s)','start_time']]\n",
     "twenty_df.head()"
    ]
   },
