--- a/nyc_bike_data.ipynb
+++ b/nyc_bike_data.ipynb
@@ -1669,10 +1669,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bike_id</th>\n",
+       "      <th>usertype</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>start_id</th>\n",
+       "      <th>start_name</th>\n",
+       "      <th>duration(s)</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30326</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.732219</td>\n",
+       "      <td>-73.981656</td>\n",
+       "      <td>504</td>\n",
+       "      <td>1 Ave &amp; E 16 St</td>\n",
+       "      <td>789</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17105</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.661063</td>\n",
+       "      <td>-73.979453</td>\n",
+       "      <td>3423</td>\n",
+       "      <td>West Drive &amp; Prospect Park West</td>\n",
+       "      <td>1541</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40177</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.743227</td>\n",
+       "      <td>-73.974498</td>\n",
+       "      <td>3687</td>\n",
+       "      <td>E 33 St &amp; 1 Ave</td>\n",
+       "      <td>1464</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27690</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.736529</td>\n",
+       "      <td>-74.006180</td>\n",
+       "      <td>346</td>\n",
+       "      <td>Bank St &amp; Hudson St</td>\n",
+       "      <td>592</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32583</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.694546</td>\n",
+       "      <td>-73.958014</td>\n",
+       "      <td>372</td>\n",
+       "      <td>Franklin Ave &amp; Myrtle Ave</td>\n",
+       "      <td>702</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bike_id    usertype  birth_year  gender  start_lat  start_lng  start_id  \\\n",
+       "0    30326  Subscriber        1992       1  40.732219 -73.981656       504   \n",
+       "1    17105    Customer        1969       1  40.661063 -73.979453      3423   \n",
+       "2    40177  Subscriber        1963       1  40.743227 -73.974498      3687   \n",
+       "3    27690  Subscriber        1980       1  40.736529 -74.006180       346   \n",
+       "4    32583  Subscriber        1982       1  40.694546 -73.958014       372   \n",
+       "\n",
+       "                        start_name  duration(s)        Date  \n",
+       "0                  1 Ave & E 16 St          789  2020-01-01  \n",
+       "1  West Drive & Prospect Park West         1541  2020-01-01  \n",
+       "2                  E 33 St & 1 Ave         1464  2020-01-01  \n",
+       "3              Bank St & Hudson St          592  2020-01-01  \n",
+       "4        Franklin Ave & Myrtle Ave          702  2020-01-01  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop columns because I only need the date\n",
+    "twenty_df.drop(twenty_df.columns[[9, 11]], axis = 1, inplace = True) \n",
+    "twenty_df.head()"
+   ]
   },
   {
    "cell_type": "code",
